Создает разметку для блока фильтров

--- a/source/index.html
+++ b/source/index.html
@@ -62,6 +62,30 @@
         </nav>
       </div>
     </header>
+    <main class="main">
+      <div class="main__container">
+        <section class="filters">
+          <div class="filters__container">
+            <button class="filters__btn filters__btn--calendar">
+              10 June 2020
+              <span>
+                <img src="./icons/calendar.svg" alt="calendar icon" />
+              </span>
+            </button>
+            <div class="filters__categories">
+              <button
+                class="filters__btn filters__btn--all filters__btn--active"
+              >
+                All
+              </button>
+              <button class="filters__btn filters__btn--favorites">
+                Favorites
+              </button>
+            </div>
+          </div>
+        </section>
+      </div>
+    </main>
     <script src="./js/common.js"></script>
   </body>
 </html>
