Описывает разметку для шапки worklog

--- a/source/index.html
+++ b/source/index.html
@@ -262,6 +262,21 @@
             </div>
           </div>
         </section>
+        <section class="worklog">
+          <div class="worklog__container">
+            <div class="worklog__item">
+              <div class="worklog__header">
+                <p class="worklog__date">Wed, June 10</p>
+                <div class="worklog__info">
+                  <p class="worklog__total-time">
+                    06:05:00
+                  </p>
+                  <meter value="60" max="100"></meter>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
       </div>
     </main>
     <script src="./js/common.js"></script>
