Исправляет ошибки в url к изображениям

--- a/source/index.html
+++ b/source/index.html
@@ -51,7 +51,7 @@
                     class="user-nav__profile-image"
                     width="46"
                     height="46"
-                    src="./img/avatar.png"
+                    src="./img/avatar.jfif"
                     alt="profile avatar"
                   />
                   <span class="visually-hidden">Profile</span>
