--- a/source/index.html
+++ b/source/index.html
@@ -105,51 +105,153 @@
                       </thead>
                       <tbody class="calendar__body">
                         <tr class="calendar__row">
-                          <td class="calendar__cell">S</td>
-                          <td class="calendar__cell">M</td>
-                          <td class="calendar__cell">T</td>
-                          <td class="calendar__cell">W</td>
-                          <td class="calendar__cell">T</td>
-                          <td class="calendar__cell">F</td>
-                          <td class="calendar__cell">S</td>
+                          <td class="calendar__cell calendar__week-day">S</td>
+                          <td class="calendar__cell calendar__week-day">M</td>
+                          <td class="calendar__cell calendar__week-day">T</td>
+                          <td class="calendar__cell calendar__week-day">W</td>
+                          <td class="calendar__cell calendar__week-day">T</td>
+                          <td class="calendar__cell calendar__week-day">F</td>
+                          <td class="calendar__cell calendar__week-day">S</td>
                         </tr>
                         <tr class="calendar__row">
-                          <td class="calendar__cell">29</td>
-                          <td class="calendar__cell">30</td>
-                          <td class="calendar__cell">31</td>
-                          <td class="calendar__cell">1</td>
-                          <td class="calendar__cell">2</td>
-                          <td class="calendar__cell">3</td>
-                          <td class="calendar__cell">4</td>
+                          <td class="calendar__cell">
+                            29 <span class="calendar__progress-bar"> </span>
+                          </td>
+
+                          <td class="calendar__cell">
+                            30 <span class="calendar__progress-bar"> </span>
+                          </td>
+
+                          <td class="calendar__cell">
+                            31 <span class="calendar__progress-bar"> </span>
+                          </td>
+
+                          <td class="calendar__cell">
+                            1 <span class="calendar__progress-bar"> </span>
+                          </td>
+
+                          <td class="calendar__cell">
+                            2 <span class="calendar__progress-bar"> </span>
+                          </td>
+
+                          <td class="calendar__cell">
+                            3 <span class="calendar__progress-bar"> </span>
+                          </td>
+
+                          <td class="calendar__cell">
+                            4 <span class="calendar__progress-bar"> </span>
+                          </td>
                         </tr>
                         <tr class="calendar__row">
-                          <td class="calendar__cell">29</td>
-                          <td class="calendar__cell">30</td>
-                          <td class="calendar__cell">31</td>
-                          <td class="calendar__cell">1</td>
-                          <td class="calendar__cell">2</td>
-                          <td class="calendar__cell">3</td>
-                          <td class="calendar__cell">4</td>
+                          <td class="calendar__cell">
+                            29 <span class="calendar__progress-bar"> </span>
+                          </td>
+
+                          <td class="calendar__cell">
+                            30 <span class="calendar__progress-bar"> </span>
+                          </td>
+
+                          <td class="calendar__cell">
+                            31 <span class="calendar__progress-bar"> </span>
+                          </td>
+
+                          <td class="calendar__cell">
+                            1 <span class="calendar__progress-bar"> </span>
+                          </td>
+
+                          <td class="calendar__cell">
+                            2 <span class="calendar__progress-bar"> </span>
+                          </td>
+
+                          <td class="calendar__cell">
+                            3 <span class="calendar__progress-bar"> </span>
+                          </td>
+
+                          <td class="calendar__cell">
+                            4 <span class="calendar__progress-bar"> </span>
+                          </td>
                         </tr>
                         <tr class="calendar__row">
-                          <td class="calendar__cell">29</td>
-                          <td class="calendar__cell">30</td>
-                          <td class="calendar__cell">31</td>
-                          <td class="calendar__cell">1</td>
-                          <td class="calendar__cell">2</td>
-                          <td class="calendar__cell">3</td>
-                          <td class="calendar__cell">4</td>
+                          <td class="calendar__cell">
+                            29 <span class="calendar__progress-bar"> </span>
+                          </td>
+
+                          <td class="calendar__cell">
+                            30 <span class="calendar__progress-bar"> </span>
+                          </td>
+
+                          <td class="calendar__cell">
+                            31 <span class="calendar__progress-bar"> </span>
+                          </td>
+
+                          <td class="calendar__cell">
+                            1 <span class="calendar__progress-bar"> </span>
+                          </td>
+
+                          <td class="calendar__cell">
+                            2 <span class="calendar__progress-bar"> </span>
+                          </td>
+
+                          <td class="calendar__cell">
+                            3 <span class="calendar__progress-bar"> </span>
+                          </td>
+
+                          <td class="calendar__cell">
+                            4 <span class="calendar__progress-bar"> </span>
+                          </td>
                         </tr>
                         <tr class="calendar__row">
-                          <td class="calendar__cell">29</td>
-                          <td class="calendar__cell">30</td>
-                          <td class="calendar__cell">31</td>
-                          <td class="calendar__cell">1</td>
-                          <td class="calendar__cell">2</td>
-                          <td class="calendar__cell">3</td>
-                          <td class="calendar__cell">4</td>
+                          <td class="calendar__cell">
+                            29 <span class="calendar__progress-bar"> </span>
+                          </td>
+
+                          <td class="calendar__cell">
+                            30 <span class="calendar__progress-bar"> </span>
+                          </td>
+
+                          <td class="calendar__cell calendar__cell--today">
+                            31 <span class="calendar__progress-bar"> </span>
+                          </td>
+
+                          <td class="calendar__cell">
+                            1 <span class="calendar__progress-bar"> </span>
+                          </td>
+
+                          <td class="calendar__cell">
+                            2 <span class="calendar__progress-bar"> </span>
+                          </td>
+
+                          <td class="calendar__cell">
+                            3 <span class="calendar__progress-bar"> </span>
+                          </td>
+
+                          <td class="calendar__cell">
+                            4 <span class="calendar__progress-bar"> </span>
+                          </td>
                         </tr>
                       </tbody>
+                      <tfoot class="calendar__legend legend">
+                        <tr class="legend__row">
+                          <td class="legend__cell">
+                            <span
+                              class="calendar__progress-bar calendar__progress-bar--done"
+                            ></span>
+                            Done
+                          </td>
+                          <td class="legend__cell">
+                            <span
+                              class="calendar__progress-bar calendar__progress-bar--in-progress"
+                            ></span>
+                            In progress
+                          </td>
+                          <td class="legend__cell">
+                            <span
+                              class="calendar__progress-bar calendar__progress-bar--missed"
+                            ></span>
+                            Missed
+                          </td>
+                        </tr>
+                      </tfoot>
                     </table>
                   </div>
                 </div>
